# PySemBridge

./: .gitignore  README.md  pyproject.toml
benchmarks/py-bench/: README.md  cve20_yasa_summary_table.csv  cve20_yasa_summary_table.md
benchmarks/py-bench/CVE-2024-8055-vannna/: README.md
benchmarks/py-bench/CVE-2025-64439-langgraph/: README.md
benchmarks/py-bench/CVE-2025-67747-fickling/: README.md
benchmarks/py-bench/cve-2024-23334-aiohttp/: README.md
bridges/cve-2025-55156-pyload/: bridge.json
docs/: auto-synthesis-status.md  end-to-end-tool-flow.md  generic-semantic-bridge-framework.md  group-meeting-research-report.md  project-overview.md  repository-structure.md  security-test-report.md  semantic-bridge-ir.md  semantic-feature-coverage.md  tool-development-flow-yasa.md  yasa-sembridge-integration.md
experiments/scripts/: compile_pyload_yasa.sh  run_auto_generic_pyload_sembridge.sh  run_auto_pyload_sembridge.sh  run_yasa_sembridge_pyload.sh  synthesize_auto_pyload_bundle.sh  synthesize_pyload_bridge.sh  verify_pyload_bridge.sh
integrations/yasa/: yasa-sembridge-interface.patch
pysembridge/: __init__.py  cli.py
pysembridge/adapters/: __init__.py
pysembridge/adapters/yasa/: __init__.py  (+1 more)
pysembridge/ir/: __init__.py  loader.py  semantic_bridge.schema.json
pysembridge/pipeline/: __init__.py  yasa.py
pysembridge/recognizer/: __init__.py  classifier.py  features.py
pysembridge/synthesizer/: __init__.py  auto.py  pyload.py  pymysql.py
pysembridge/verifier/: __init__.py  chain.py  sarif.py
tests/: test_ir_loader.py  test_recognizer_features.py
(+51 files in other folders)
