[project]
name = "pysembridge"
version = "0.1.0"
description = "Semantic Bridge IR and adapters for Python dynamic taint under-tainting experiments."
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
validate = [
  "jsonschema>=4.0.0",
]

[project.scripts]
pysembridge = "pysembridge.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
